Extend relative angles to branches
While at it:
- extend Strahler analysis
- Allow cache results to be cleared on demand